--- a/index.html
+++ b/index.html
@@ -13,40 +13,51 @@
   background-color: #f0f0f0;
 }
 .calculator {
-  border: 2px solid #333;
-  border-radius: 10px;
-  padding: 20px;
   background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  width: 250px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 .display {
+  width: 100%;
   height: 40px;
-  background-color: #222;
-  color: #fff;
   font-size: 1.5em;
   text-align: right;
-  padding: 5px 10px;
-  border-radius: 5px;
   margin-bottom: 10px;
-  overflow-x: auto;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
 }
-.btn {
-  padding: 15px;
-  font-size: 1em;
+button {
+  height: 50px;
+  font-size: 1.2em;
   border: none;
   border-radius: 5px;
-  background-color: #eee;
   cursor: pointer;
+  background-color: #e0e0e0;
   transition: background-color 0.2s;
 }
-.btn:hover {
-  background-color: #ddd;
+button:hover {
+  background-color: #d0d0d0;
+}
+.clear {
+  grid-column: span 2;
+  background-color: #ff6666;
+  color: #fff;
+}
+.operator {
+  background-color: #66b3ff;
+  color: #fff;
+}
+.equals {
+  grid-column: span 2;
+  background-color: #66ff66;
+  color: #fff;
 }
 </style>
 </head>
@@ -61,92 +72,96 @@
 </head>
 <body>
 <div class="calculator">
-  <div class="display" id="display">0</div>
+  <input type="text" class="display" disabled />
   <div class="buttons">
-    <button class="btn" data-action="clear">C</button>
-    <button class="btn" data-action="operator" data-value="+">+</button>
-    <button class="btn" data-action="operator" data-value="-">-</button>
-    <button class="btn" data-action="operator" data-value="*">*</button>
-    <button class="btn" data-action="operator" data-value="/">/</button>
-    <button class="btn" data-action="number" data-value="7">7</button>
-    <button class="btn" data-action="number" data-value="8">8</button>
-    <button class="btn" data-action="number" data-value="9">9</button>
-    <button class="btn" data-action="number" data-value="4">4</button>
-    <button class="btn" data-action="number" data-value="5">5</button>
-    <button class="btn" data-action="number" data-value="6">6</button>
-    <button class="btn" data-action="number" data-value="1">1</button>
-    <button class="btn" data-action="number" data-value="2">2</button>
-    <button class="btn" data-action="number" data-value="3">3</button>
-    <button class="btn" data-action="number" data-value="0">0</button>
-    <button class="btn" data-action="equals">=</button>
+    <button class="clear">C</button>
+    <button class="operator" data-op="+">+</button>
+    <button class="operator" data-op="-">-</button>
+    <button class="operator" data-op="*">*</button>
+    <button class="operator" data-op="/">/</button>
+    <button class="number" data-num="7">7</button>
+    <button class="number" data-num="8">8</button>
+    <button class="number" data-num="9">9</button>
+    <button class="number" data-num="4">4</button>
+    <button class="number" data-num="5">5</button>
+    <button class="number" data-num="6">6</button>
+    <button class="number" data-num="1">1</button>
+    <button class="number" data-num="2">2</button>
+    <button class="number" data-num="3">3</button>
+    <button class="number" data-num="0">0</button>
+    <button class="equals">=</button>
   </div>
 </div>
 <script src="script.js"></script>
 </body>
 </html>
-    <script>const display = document.getElementById('display');
-const buttons = document.querySelectorAll('.btn');
+    <script>const display = document.querySelector('.display');
+const numberButtons = document.querySelectorAll('.number');
+const operatorButtons = document.querySelectorAll('.operator');
+const clearButton = document.querySelector('.clear');
+const equalsButton = document.querySelector('.equals');
+
 let currentInput = '';
 let previousInput = '';
-let operator = null;
-let resultDisplayed = false;
+let currentOperator = null;
 
 function updateDisplay() {
-  display.textContent = currentInput || '0';
+  display.value = currentInput;
 }
 
-buttons.forEach(button => {
+numberButtons.forEach(button => {
   button.addEventListener('click', () => {
-    const action = button.dataset.action;
-    const value = button.dataset.value;
-
-    if (action === 'number') {
-      if (resultDisplayed) {
-        currentInput = value;
-        resultDisplayed = false;
-      } else {
-        currentInput += value;
-      }
-      updateDisplay();
-    } else if (action === 'operator') {
-      if (currentInput === '') return;
-      if (previousInput !== '') {
-        currentInput = evaluate(previousInput, currentInput, operator);
-        updateDisplay();
-      }
-      previousInput = currentInput;
-      operator = value;
-      currentInput = '';
-    } else if (action === 'equals') {
-      if (previousInput !== '' && currentInput !== '' && operator) {
-        currentInput = evaluate(previousInput, currentInput, operator);
-        updateDisplay();
-        previousInput = '';
-        operator = null;
-        resultDisplayed = true;
-      }
-    } else if (action === 'clear') {
-      currentInput = '';
-      previousInput = '';
-      operator = null;
-      updateDisplay();
-    }
+    currentInput += button.dataset.num;
+    updateDisplay();
   });
 });
 
-function evaluate(a, b, op) {
-  const numA = parseFloat(a);
-  const numB = parseFloat(b);
-  if (isNaN(numA) || isNaN(numB)) return '';
-  switch (op) {
-    case '+': return (numA + numB).toString();
-    case '-': return (numA - numB).toString();
-    case '*': return (numA * numB).toString();
-    case '/': return numB === 0 ? 'Error' : (numA / numB).toString();
-    default: return '';
-  }
-}
+operatorButtons.forEach(button => {
+  button.addEventListener('click', () => {
+    if (currentInput === '') return;
+    if (previousInput !== '') {
+      compute();
+    }
+    currentOperator = button.dataset.op;
+    previousInput = currentInput;
+    currentInput = '';
+  });
+});
 
-updateDisplay();</script>
+equalsButton.addEventListener('click', () => {
+  if (currentInput === '' || previousInput === '' || !currentOperator) return;
+  compute();
+});
+
+clearButton.addEventListener('click', () => {
+  currentInput = '';
+  previousInput = '';
+  currentOperator = null;
+  updateDisplay();
+});
+
+function compute() {
+  const prev = parseFloat(previousInput);
+  const current = parseFloat(currentInput);
+  let result = 0;
+  switch (currentOperator) {
+    case '+':
+      result = prev + current;
+      break;
+    case '-':
+      result = prev - current;
+      break;
+    case '*':
+      result = prev * current;
+      break;
+    case '/':
+      result = current === 0 ? 'Error' : prev / current;
+      break;
+  }
+  currentInput = result.toString();
+  previousInput = '';
+  currentOperator = null;
+  updateDisplay();
+}</script>
 </body>
 </html>
